WIP: for pnote v0.8.1.1