@@ -1,11 +1,11 @@
 package net.thevpc.echo.swing.peers;
 
 import net.thevpc.common.swing.tree.TreeTransferHandler;
+import net.thevpc.echo.Application;
 import net.thevpc.echo.api.AppColor;
 import net.thevpc.echo.api.AppFont;
 import net.thevpc.echo.api.AppImage;
 import net.thevpc.echo.api.components.*;
-import net.thevpc.echo.api.components.AppTreeNode;
 import net.thevpc.echo.constraints.Anchor;
 import net.thevpc.echo.impl.TreeNode;
 import net.thevpc.echo.spi.peers.AppTreePeer;
@@ -22,9 +22,9 @@ import java.awt.event.MouseEvent;
 import java.awt.event.MouseListener;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
-import net.thevpc.echo.Application;
 
 public class SwingTreePeer implements SwingPeer, AppTreePeer {
     private JTree swingComponent;
@@ -34,17 +34,56 @@ public class SwingTreePeer implements SwingPeer, AppTreePeer {
     public SwingTreePeer() {
     }
 
+    public static TreePath toTreePath(AppTreeNode note) {
+        List<AppTreeNode> elems = new ArrayList<>();
+        while (note != null) {
+            elems.add(0, note);
+            note = (AppTreeNode) note.parent().get();
+        }
+        return new TreePath(elems.toArray());
+    }
+    public static Object[] toTreePath2Arr(AppTreeNode note) {
+        List<AppTreeNode> elems = new ArrayList<>();
+        while (note != null) {
+            elems.add(0, note);
+            note = (AppTreeNode) note.parent().get();
+        }
+//        if(elems.size()>1){
+//            elems.remove(0);
+//        }
+        return elems.toArray();
+    }
+//    public static Object[] toTreePath2Arr(AppTreeNode note) {
+//        List<AppTreeNode> elems = new ArrayList<>();
+//        while (note != null) {
+//            elems.add(0, note);
+//            note = (AppTreeNode) note.parent().get();
+//        }
+//        if(elems.size()>1){
+//            elems.remove(0);
+//        }
+//        return elems.toArray();
+//    }
+
+//    public static TreePath toTreePath2(AppTreeNode note) {
+//        List<AppTreeNode> elems = new ArrayList<>();
+//        while (note != null) {
+//            elems.add(0, note);
+//            note = (AppTreeNode) note.parent().get();
+//        }
+//        if(elems.size()>0){
+//            elems.remove(0);
+//        }
+//        return new TreePath(elems.toArray());
+//    }
+
     public void install(AppComponent component0) {
         appTree = (AppTree<?>) component0;
-        swingComponent = new JTree(new DefaultTreeModel(new DefaultMutableTreeNode("root")));
+        swingComponent = new JTree(m = new TreeItemTreeModel<>(appTree));
         SwingPeerHelper.installComponent(appTree, swingComponent);
-        m = new TreeItemTreeModel<>(
-                appTree, swingComponent
-        );
-        swingComponent.setModel(m);
-
+        m.bindJTree(swingComponent);
         swingComponent.setRootVisible(appTree.rootVisible().get());
-        appTree.rootVisible().onChange(e->{
+        appTree.rootVisible().onChange(e -> {
             swingComponent.setRootVisible(appTree.rootVisible().get());
         });
 
@@ -53,19 +92,38 @@ public class SwingTreePeer implements SwingPeer, AppTreePeer {
         swingComponent.setTransferHandler(new TreeTransferHandler(TreeNode.class, m));
         swingComponent.addTreeSelectionListener(e -> {
             TreePath[] spaths = swingComponent.getSelectionPaths();
-            spaths=spaths==null?new TreePath[0]:spaths;
-            List<TreeNode> nodes = Arrays.stream(spaths)
-                    .map(p -> (TreeNode) p.getLastPathComponent())
+            spaths = spaths == null ? new TreePath[0] : spaths;
+//            List<TreeNode> nodes = Arrays.stream(spaths)
+//                    .map(p -> (TreeNode) p.getLastPathComponent())
+//                    .collect(Collectors.toList());
+            List<AppTreeNode> after_swingSelection = Arrays.stream(spaths)
+                    .map(p -> ((AppTreeNode) p.getLastPathComponent()))
                     .collect(Collectors.toList());
-            List<Object> onodes = Arrays.stream(spaths)
-                    .map(p -> ((TreeNode) p.getLastPathComponent()).get())
-                    .collect(Collectors.toList());
-            appTree.selection().setAll(nodes.toArray(new AppTreeNode[0]));
+            List<? extends AppTreeNode<?>> before_echoSelection = appTree.selection().toList();
+            List<?> collBefore = before_echoSelection.stream().map(x -> x.get()).collect(Collectors.toList());
+            List<Object> collAfter = after_swingSelection.stream().map(x -> x.get()).collect(Collectors.toList());
+            if (!before_echoSelection.equals(after_swingSelection)) {
+                System.out.println("SWING-ECHO......................");
+                System.out.println("==> BEFORE " + before_echoSelection.size() + " :: " + collBefore);
+                System.out.println("==> AFTER " + after_swingSelection.size() + " :: " + collAfter);
+                appTree.selection().setCollection((Collection) after_swingSelection);
+            }
         });
         appTree.selection().onChange(e -> {
-            List<? extends AppTreeNode<?>> allSelections = appTree.selection().toList();
-            List<TreePath> selectedPaths = allSelections.stream().map(x -> toTreePath(x)).collect(Collectors.toList());
-            swingComponent.setSelectionPaths(selectedPaths.toArray(new TreePath[0]));
+            List<? extends AppTreeNode<?>> after_echoSelection = appTree.selection().toList();
+            List<TreePath> echoSelectionPaths = after_echoSelection.stream().map(x -> toTreePath(x)).collect(Collectors.toList());
+            TreePath[] swingPaths = swingComponent.getSelectionPaths();
+            swingPaths = swingPaths == null ? new TreePath[0] : swingPaths;
+
+            List<AppTreeNode> before_swingSelection = Arrays.stream(swingPaths)
+                    .map(p -> ((AppTreeNode) p.getLastPathComponent()))
+                    .collect(Collectors.toList());
+            if (!before_swingSelection.equals(after_echoSelection)) {
+                System.out.println("ECHO-SWING......................");
+                System.out.println("==> BEFORE " + before_swingSelection.size() + " :: " + before_swingSelection.stream().map(x -> x.get()).collect(Collectors.toList()));
+                System.out.println("==> AFTER " + after_echoSelection.size() + " :: " + after_echoSelection.stream().map(x -> x.get()).collect(Collectors.toList()));
+                swingComponent.setSelectionPaths(echoSelectionPaths.toArray(new TreePath[0]));
+            }
         });
 
         swingComponent.addMouseListener(new MouseListener() {
@@ -134,76 +192,21 @@ public class SwingTreePeer implements SwingPeer, AppTreePeer {
 
 //        toolkitComponent.setRowHeight(15);
         swingComponent.setCellRenderer(new MyDefaultTreeCellRenderer(this));
-        appTree.locale().onChange(()->{
+        appTree.locale().onChange(() -> {
             swingComponent.setCellRenderer(new MyDefaultTreeCellRenderer(this));
         });
-        appTree.iconSet().onChange(()->{
+        appTree.iconSet().onChange(() -> {
             swingComponent.setCellRenderer(new MyDefaultTreeCellRenderer(this));
         });
-    }
+        appTree.iconConfig().onChange(() -> {
+            swingComponent.setCellRenderer(new MyDefaultTreeCellRenderer(this));
+        });
 
-    protected static TreeModel getDefaultTreeModel() {
-        DefaultMutableTreeNode root = new DefaultMutableTreeNode("JTree");
-        DefaultMutableTreeNode      parent;
-
-        parent = new DefaultMutableTreeNode("colors");
-        root.add(parent);
-        parent.add(new DefaultMutableTreeNode("blue"));
-        parent.add(new DefaultMutableTreeNode("violet"));
-        parent.add(new DefaultMutableTreeNode("red"));
-        parent.add(new DefaultMutableTreeNode("yellow"));
-
-        parent = new DefaultMutableTreeNode("sports");
-        root.add(parent);
-        parent.add(new DefaultMutableTreeNode("basketball"));
-        parent.add(new DefaultMutableTreeNode("soccer"));
-        parent.add(new DefaultMutableTreeNode("football"));
-        parent.add(new DefaultMutableTreeNode("hockey"));
-
-        parent = new DefaultMutableTreeNode("food");
-        root.add(parent);
-        parent.add(new DefaultMutableTreeNode("hot dogs"));
-        parent.add(new DefaultMutableTreeNode("pizza"));
-        parent.add(new DefaultMutableTreeNode("ravioli"));
-        parent.add(new DefaultMutableTreeNode("bananas"));
-        return new DefaultTreeModel(root);
-    }
-    public static Object[] toTreePath2Arr(AppTreeNode note) {
-        List<AppTreeNode> elems = new ArrayList<>();
-        while (note != null) {
-            elems.add(0, note);
-            note = (AppTreeNode) note.parent().get();
-        }
-        if(elems.size()>1){
-            elems.remove(0);
-        }
-        return elems.toArray();
-    }
-
-    public static TreePath toTreePath2(AppTreeNode note) {
-        List<AppTreeNode> elems = new ArrayList<>();
-        while (note != null) {
-            elems.add(0, note);
-            note = (AppTreeNode) note.parent().get();
-        }
-        if(elems.size()>0){
-            elems.remove(0);
-        }
-        return new TreePath(elems.toArray());
     }
 
     @Override
     public Object toolkitComponent() {
         return swingComponent;
-    }
-
-    public static TreePath toTreePath(AppTreeNode note) {
-        List<AppTreeNode> elems = new ArrayList<>();
-        while (note != null) {
-            elems.add(0, note);
-            note = (AppTreeNode) note.parent().get();
-        }
-        return new TreePath(elems.toArray());
     }
 
     private static class MyDefaultTreeCellRenderer extends DefaultTreeCellRenderer {
@@ -223,38 +226,38 @@ public class SwingTreePeer implements SwingPeer, AppTreePeer {
         @Override
         public Component getTreeCellRendererComponent(JTree tree, Object value, boolean sel, boolean expanded, boolean leaf, int row, boolean hasFocus) {
             AppTreeItemRenderer<?> r = peer.appTree.itemRenderer().get();
-            TreeNode node=(TreeNode) value;
-            MyAppChoiceItemContext cc = new MyAppChoiceItemContext(this,tree, leaf,
+            TreeNode node = (TreeNode) value;
+            MyAppChoiceItemContext cc = new MyAppChoiceItemContext(this, tree, leaf,
                     node, sel, hasFocus, expanded, row,
-                    (node==null|| node.get()==null)?"":node.get().toString()
-                    );
-            if(initialFont==null){
-                initialFont=SwingHelpers.fromAwtFont(getFont(),peer.appTree.app());
-            }else{
+                    (node == null || node.get() == null) ? "" : node.get().toString()
+            );
+            if (initialFont == null) {
+                initialFont = SwingHelpers.fromAwtFont(getFont(), peer.appTree.app());
+            } else {
                 setFont(SwingHelpers.toAwtFont(initialFont));
             }
-            if(initialForeground==null){
-                initialForeground=SwingHelpers.fromAwtColor(getForeground(),peer.appTree.app());
-            }else{
+            if (initialForeground == null) {
+                initialForeground = SwingHelpers.fromAwtColor(getForeground(), peer.appTree.app());
+            } else {
                 setForeground(SwingHelpers.toAwtColor(initialForeground));
             }
-            if(initialBackground==null){
-                initialBackground=SwingHelpers.fromAwtColor(getBackground(),peer.appTree.app());
-            }else{
+            if (initialBackground == null) {
+                initialBackground = SwingHelpers.fromAwtColor(getBackground(), peer.appTree.app());
+            } else {
                 setBackground(SwingHelpers.toAwtColor(initialBackground));
             }
             if (r != null) {
                 r.render(cc);
-            }else{
+            } else {
                 cc.renderDefaults();
             }
             return this;
         }
 
-        public void reset(){
-            initialFont=null;
-            initialForeground=null;
-            initialBackground=null;
+        public void reset() {
+            initialFont = null;
+            initialForeground = null;
+            initialBackground = null;
         }
 
         @Override
@@ -266,6 +269,10 @@ public class SwingTreePeer implements SwingPeer, AppTreePeer {
 
     private static class MyAppChoiceItemContext<T> implements AppTreeItemContext<T> {
         private final MyDefaultTreeCellRenderer myDefaultTreeCellRenderer;
+        boolean bold = false;
+        boolean italic = false;
+        boolean underline = false;
+        boolean strikeThrough = false;
         private String text;
         private Object value;
         private Object node;
@@ -276,10 +283,6 @@ public class SwingTreePeer implements SwingPeer, AppTreePeer {
         private int row;
         private JTree tree;
         private AppFont font;
-        boolean bold =false;
-        boolean italic =false;
-        boolean underline =false;
-        boolean strikeThrough =false;
 
         public MyAppChoiceItemContext(MyDefaultTreeCellRenderer myDefaultTreeCellRenderer,
                                       JTree tree, boolean leaf, TreeNode node, boolean selected, boolean focused, boolean expanded, int row,
@@ -292,15 +295,15 @@ public class SwingTreePeer implements SwingPeer, AppTreePeer {
             this.myDefaultTreeCellRenderer = myDefaultTreeCellRenderer;
             this.expanded = expanded;
             this.row = row;
-            this.value =node==null?null:node.get();
-            this.text =text;
-            this.font =SwingHelpers.fromAwtFont(myDefaultTreeCellRenderer.getFont(), getTree().app());
+            this.value = node == null ? null : node.get();
+            this.text = text;
+            this.font = SwingHelpers.fromAwtFont(myDefaultTreeCellRenderer.getFont(), getTree().app());
         }
 
-        public void setValue(Object value) {
-            this.value = value;
+        @Override
+        public Application getApplication() {
+            return myDefaultTreeCellRenderer.peer.appTree.app();
         }
-
 
         @Override
         public boolean isExpanded() {
@@ -318,15 +321,12 @@ public class SwingTreePeer implements SwingPeer, AppTreePeer {
         }
 
         @Override
-        public Application getApplication() {
-            return myDefaultTreeCellRenderer.peer.appTree.app();
-        }
-        
-
-
-        @Override
         public T getValue() {
             return (T) value;
+        }
+
+        public void setValue(Object value) {
+            this.value = value;
         }
 
         @Override
@@ -336,7 +336,7 @@ public class SwingTreePeer implements SwingPeer, AppTreePeer {
 
         @Override
         public void setText(String text) {
-            this.text=text;
+            this.text = text;
             myDefaultTreeCellRenderer.setText(text);
         }
 
@@ -355,9 +355,9 @@ public class SwingTreePeer implements SwingPeer, AppTreePeer {
         @Override
         public void setTextFont(AppFont font) {
             if (font != null) {
-                this.font=font;
-            }else{
-                this.font=myDefaultTreeCellRenderer.initialFont;
+                this.font = font;
+            } else {
+                this.font = myDefaultTreeCellRenderer.initialFont;
             }
             SwingApplicationUtils.setComponentFont(myDefaultTreeCellRenderer,
                     font, null, null, underline, strikeThrough);
@@ -365,14 +365,14 @@ public class SwingTreePeer implements SwingPeer, AppTreePeer {
 
         @Override
         public void setTextUnderline(boolean underline) {
-            this.underline=underline;
+            this.underline = underline;
             SwingApplicationUtils.setComponentFont(myDefaultTreeCellRenderer,
                     font, null, null, underline, strikeThrough);
         }
 
         @Override
         public void setTextStrikeThrough(boolean strikeThrough) {
-            this.strikeThrough=strikeThrough;
+            this.strikeThrough = strikeThrough;
             SwingApplicationUtils.setComponentFont(myDefaultTreeCellRenderer,
                     font, null, null, underline, strikeThrough);
         }
@@ -406,14 +406,14 @@ public class SwingTreePeer implements SwingPeer, AppTreePeer {
 
         @Override
         public AppFont getFont() {
-            return SwingHelpers.fromAwtFont(myDefaultTreeCellRenderer.getFont(),getTree().app());
+            return SwingHelpers.fromAwtFont(myDefaultTreeCellRenderer.getFont(), getTree().app());
         }
 
         @Override
         public AppColor getColor() {
 
             Color f = myDefaultTreeCellRenderer.getForeground();
-            return f==null?null:new net.thevpc.echo.Color(f.getRGB(),true, getTree().app());
+            return f == null ? null : new net.thevpc.echo.Color(f.getRGB(), true, getTree().app());
         }
 
         @Override
@@ -423,8 +423,8 @@ public class SwingTreePeer implements SwingPeer, AppTreePeer {
 
         @Override
         public void setBackgroundColor(AppColor c) {
-            if(c==null){
-                c= net.thevpc.echo.Color.WHITE(getApplication());
+            if (c == null) {
+                c = net.thevpc.echo.Color.WHITE(getApplication());
             }
             myDefaultTreeCellRenderer.setBackground(
                     c == null ? null : (Color) c.peer().toolkitColor()
@@ -443,41 +443,41 @@ public class SwingTreePeer implements SwingPeer, AppTreePeer {
 
         @Override
         public void setBackgroundNonSelectionColor(AppColor c) {
-            if(c==null){
-                c= net.thevpc.echo.Color.BLACK(getApplication());
+            if (c == null) {
+                c = net.thevpc.echo.Color.BLACK(getApplication());
             }
             myDefaultTreeCellRenderer.setBackgroundNonSelectionColor(
-                    c==null?null:new Color(c.rgba())
+                    c == null ? null : new Color(c.rgba())
             );
         }
 
         @Override
         public void setBackgroundSelectionColor(AppColor c) {
-            if(c==null){
-                c= net.thevpc.echo.Color.WHITE(getApplication());
+            if (c == null) {
+                c = net.thevpc.echo.Color.WHITE(getApplication());
             }
             myDefaultTreeCellRenderer.setBackgroundSelectionColor(
-                    c==null?null:new Color(c.rgba())
+                    c == null ? null : new Color(c.rgba())
             );
         }
 
         @Override
         public void setTextNonSelectionColor(AppColor c) {
-            if(c==null){
-                c= net.thevpc.echo.Color.BLACK(getApplication());
+            if (c == null) {
+                c = net.thevpc.echo.Color.BLACK(getApplication());
             }
             myDefaultTreeCellRenderer.setTextNonSelectionColor(
-                    c==null?null:new Color(c.rgba())
+                    c == null ? null : new Color(c.rgba())
             );
         }
 
         @Override
         public void setTextSelectionColor(AppColor c) {
-            if(c==null){
-                c= net.thevpc.echo.Color.BLACK(getApplication());
+            if (c == null) {
+                c = net.thevpc.echo.Color.BLACK(getApplication());
             }
             myDefaultTreeCellRenderer.setTextSelectionColor(
-                    c==null?null:new Color(c.rgba())
+                    c == null ? null : new Color(c.rgba())
             );
         }
     }
